# btech-cpp-metrics-service

./: .dockerignore  CMakeLists.txt  Dockerfile  btech-cpp-metrics-service.sln  btech-cpp-metrics-service.vcxproj  btech-cpp-metrics-service.vcxproj.filters  docker-compose.yml  main.cpp  vcpkg.json
config/: config.json
src/: AlertManager.cpp  AlertManager.h  Config.h  HttpServer.cpp  HttpServer.h  MetricsProcessor.cpp  MetricsProcessor.h  main.cpp
